# grasp_gen

./: CMakeLists.txt
include/grasp_gen/: anti_podal_grasp.h
src/: anti_podal_grasp.cc  test.cc
